Fixed that image overflow

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -202,7 +202,7 @@ select option {
 
 .box > div {
   width: 38%;
-  height: 350px;
+  /* height: 350px; */
   justify-content: center;
   align-items: flex-start;
 }
